turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:15: error: not found: value colors
		if (getCouleurSol()==colors(i))
                                     ^Turmite:18: error: not found: value colors
			if (i!=colors.length-1)
                               ^Turmite:29: error: not found: value colors
			if (i!=colors.length-1)
                               ^Turmite:40: error: not found: value rule
	couleurAMettre=rule(state)(a)(0)
                       ^Turmite:41: error: not found: value colors
	setCouleurBrosse(colors(couleurAMEttre))
                         ^Turmite:45: error: not found: value rule
	mvtAEffectuer=rule(state)(a)(1)
                      ^Turmite:67: error: not found: value rule
	state=rule(state)(a)(2)
              ^